<package>

  <name>lslidar_c128</name>
  <version>1.0.0</version>
  <description>
    Basic ROS support for the Leishen C128 LIDARs.
  </description>
  <maintainer email="zufanglei@lslidar.com">leo</maintainer>
  <author>leo</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>lslidar_c128_driver</run_depend>
  <run_depend>lslidar_c128_msgs</run_depend>
  <run_depend>lslidar_c128_decoder</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
